--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
             <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
             <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.png');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight font-heading">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -222,9 +222,9 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/ambassador.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="CDA Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
-                                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the Ambassador</h2>
+                                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the CDA</h2>
                                 <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
                                 <a href="ambassador.html" class="nigeria-green font-semibold hover:underline">Read the full message <i class="fas fa-arrow-right ml-1"></i></a>
                             </div>
